--- a/com.paultyng.slack.sdPlugin/user_pi.html
+++ b/com.paultyng.slack.sdPlugin/user_pi.html
@@ -18,7 +18,7 @@
         <div class="sdpi-item">
             <div class="sdpi-item-label">User ID</div>
             <input class="sdpi-item-value" id="user" value="" placeholder="U123ABC..."
-                onchange="sendValueToPlugin(event.target.value, 'user')" required pattern="U.+">
+                onchange="sendValueToPlugin(event.target.value, 'user')" required pattern="[WU].+">
         </div>
     </div>
     <details>
